Resolve test cluster module from expandedBundle